# imdb-plex-sync

./: .gitignore  AGENTS.md  README.md  imdb_plex_sync.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  merge.yml  sync.yml  test.yml
