[project]
name = "imdb-plex-sync"
readme = "README.md"
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.0.0,<9.0",    
    "plexapi>=4.0.0,<5.0",
    "requests>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0,<2.0",
    "ruff>=0.6.0",
    "types-requests>=2.0.0,<3.0",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
