[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "imdb-plex-sync"
version = "0.1.1"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.8,<9",
]
scripts.imdb-plex-sync = "imdb_plex_sync:main"

[dependency-groups]
dev = [
    "mypy>=1.4,<2",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel.force-include]
"imdb_plex_sync.py" = "imdb_plex_sync/__init__.py"

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
